[package]
name = "docdoc"
version = "0.1.0"
authors = ["Marc Addeo <marcaddeo@gmail.com>"]

[lib]
name = "docdoc"
path = "src/lib.rs"

[[bin]]
name = "docdoc"
path = "src/main.rs"

[dependencies]
error-chain = "0.11.0"
pulldown-cmark = { version = "0.0.11", default-features = false }
tera = "0.10"
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8"
serde_yaml = "0.7"
fs_extra = "1.0.0"
comrak = "0.2.3"
yaml-rust = "0.4.0"
